# FastTubeDownloader

./: .gitignore  BUILD_RUST.md  CONTRIBUTING.md  DESKTOP_REDESIGN.md  EXTENSION_ID_GUIDE.md  FIREFOX_INTERCEPTION.md  FIREFOX_SUBMISSION.md  FIX_OLD_INTERFACE.md  IMPLEMENTATION_SUMMARY.md  INSTALL_AND_PUBLISH.md  LICENSE  PLAYLIST_FOLDERS.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SUCCESS.md  UI_CLARIFICATION.md  VERIFY_INSTALLATION.md  background-wrapper.js  background.js  build_rust.sh  clean_install.sh  content.js  debug_extension.sh  download_ui.js  fast_ytdl.sh  force_reload.sh  install_v2.sh  manifest.firefox.json  manifest.json  package_firefox.sh  popup.css  popup.html  popup.js  release.sh  setup.sh  test_playlist_folder.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
gui/: __init__.py  download_engine.py  file_organizer.py  first_time_setup.py  main_window.py  playlist_utils.py
native_host/: bridge.py  com.fasttube.downloader.json
packaging/: AppImageBuilder.yml  fasttube-downloader.desktop  launch-wrapper.sh
packaging/arch/: PKGBUILD
packaging/debian/: control  fasttube-downloader.postinst  rules
packaging/flatpak/: com.fasttube.downloader.json
packaging/rpm/: fasttube-downloader.spec
rust_downloader/: Cargo.toml  README.md
rust_downloader/src/: downloader.rs  lib.rs  progress.rs
scripts/: build.sh  easy_install.sh  release.sh
tests/: test_playlist_dedup.py
tools/: generate_extension_key.py
(+1 files in other folders)
